button and div alignment corrections.

--- a/client/main.less
+++ b/client/main.less
@@ -31,6 +31,7 @@ body {
 }
 .Body_right_div {
   .body-side-div;
+  overflow: visible !important;
 }
 .button{
 	display: inline;
@@ -82,9 +83,10 @@ div[class^="col-lg-"], div[class^=".col-md-"], div[class^=".col-sm-"], div[class
   width: auto;
 }
 .row {
-  margin-right: -80px;
-  margin-left: -15px;
+  margin-right: -0px;
+  margin-left: -0px;
 }
 .textColor{ color:white !important; }
 .width20Percent{ width:25% !important; }
 .width40Percent{ width:40% !important; }
+.paddingLeft20{padding-Left:20px;}
